# buddyagent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_fe  README.md  langgraph.json  llm-example.yaml  pyproject.toml  requirements.txt  restart_buddy.sh  restart_web.sh
agent/: agents.py
conf/: config_loader.py
fe/: chat.js  index.html
llm/: llm_api.py
src/: main.py
src/agent/: __init__.py  agents.py  examples.py  graph.py  play.ipynb  state.py  tools.py
src/conf/: config_loader.py
src/graph/: graph.py
src/llmproxy/: llm_api.py
src/prompts/: coordinator.md  planner.md  react.md  reporter.md  researcher.md  supervisor.md  template.py
tests/: test_example.py
